#: add duplicate validation
